--- a/src/app/components/listar-comentarios/listar-comentarios.component.html
+++ b/src/app/components/listar-comentarios/listar-comentarios.component.html
@@ -1,11 +1,9 @@
-<p>listar-comentarios works!</p>
+<app-navbar></app-navbar>
 <div class="row mt3">
     <div class="col lg6">
         <h3>Listado de comentarios</h3>
     </div>
-    <div class="col lg6">
-        <button  class="btn btn-primary" routerLink="/add">Agregar comentario</button>
-    </div>
+    
 </div>
 <table ngif="listComentarios.length>0" class="table table-hover mt-3">
     <thead>
@@ -19,9 +17,9 @@
     </thead>
     <tbody>
         <tr *ngFor="let comentario of listComentarios">
-            <td>{{comentario.titulo}}</td>
-            <td>{{comentario.autor}}</td>
-            <td>{{comentario.fechaCreacion | date: 'dd/MM/yyyy' }}</td>
+            <td>{{comentario.nombres}}</td>
+            <td>{{comentario.apellidos}}</td>
+            <td>{{comentario.entidad}}</td>
             <td></td>
             <td></td>
         </tr>
